hide 'add' panes using css in pim qualifications section. Prevents flickering when hiding using javascript.

--- a/php/orangehrm/symfony/plugins/orangehrmPimPlugin/web/css/viewQualificationsSuccess.css
+++ b/php/orangehrm/symfony/plugins/orangehrmPimPlugin/web/css/viewQualificationsSuccess.css
@@ -51,3 +51,16 @@ span#static_license_code {
     margin-top: 10px;
     padding: 1px 4px;
 }
+
+div#changeWorkExperience,
+div#changeEducation,
+div#changeLanguage,
+div#changeSkill,
+div#changeLicense,
+div#workExpRequiredNote,
+div#educationRequiredNote,
+div#languageRequiredNote,
+div#skillRequiredNote,
+div#LicenseRequiredNote {
+    display:none;
+}
